--- a/app/src/main/res/layout/pin_entry.xml
+++ b/app/src/main/res/layout/pin_entry.xml
@@ -21,7 +21,6 @@
             android:background="@drawable/back"
             android:textAlignment="center" />
 
-
         <TextView
             android:id="@+id/textView3"
             android:textSize="@android:dimen/app_icon_size"
@@ -30,6 +29,18 @@
             android:textAlignment="center"
             android:background="@drawable/back"
             android:text="" />
+
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start" />
+
+        <Button
+            android:id="@+id/btnStop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="End" />
     </LinearLayout>
 
     <LinearLayout
