--- a/app/src/main/res/layout/pin_entry.xml
+++ b/app/src/main/res/layout/pin_entry.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:hapticFeedbackEnabled="true"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:orientation="horizontal"
